--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,39 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.adwitiya.cs7cs3.towerpower.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    android:layout_height="700dp"
+    android:gravity="top"
+    android:orientation="vertical"
+    android:paddingTop="@dimen/activity_top_margin">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:background="@drawable/main_nav_bar"
+        android:gravity="center|clip_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
+
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-smallcaps"
+            android:gravity="center_horizontal"
+            android:text="Tower Power"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="36sp"
+            android:typeface="monospace" />
+
+        <Space
+            android:id="@+id/space"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/subheader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-smallcaps"
+            android:gravity="center_horizontal"
+            android:text="Location Based Android Game"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="411dp"
-        android:layout_height="584dp"
-        app:srcCompat="@drawable/tower"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="51dp" />
+        android:id="@+id/divider_1"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        app:srcCompat="?attr/dividerHorizontal" />
+
+    <ImageView
+        android:id="@+id/collect_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal|center"
+        android:paddingTop="10dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/collect_icon" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="casual"
-        android:text="Tower Power - Location based Android Game"
+        android:id="@+id/collect_text"
+        android:layout_width="70dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center_horizontal|center"
+        android:fontFamily="sans-serif-smallcaps"
+        android:scaleType="fitCenter"
+        android:text="Collect"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="94dp" />
+        android:textSize="18sp"
+        android:typeface="sans" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
+    <ImageView
+        android:id="@+id/divider_2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        android:layout_height="30dp"
+        app:srcCompat="?attr/dividerHorizontal" />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/destroy_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal|center"
+        android:paddingTop="10dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/destroy" />
+
+    <TextView
+        android:id="@+id/destroy_text"
+        android:layout_width="70dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center_horizontal|center"
+        android:fontFamily="sans-serif-smallcaps"
+        android:scaleType="fitCenter"
+        android:text="Destroy"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="18sp"
+        android:typeface="sans" />
+
+    <ImageView
+        android:id="@+id/divider_3"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        app:srcCompat="?attr/dividerHorizontal" />
+
+    <ImageView
+        android:id="@+id/defend_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal|center"
+        android:paddingTop="10dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/defend" />
+
+    <TextView
+        android:id="@+id/defend_text"
+        android:layout_width="60dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center_horizontal|center"
+        android:fontFamily="sans-serif-smallcaps"
+        android:scaleType="fitCenter"
+        android:text="Defend"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="18sp"
+        android:typeface="sans" />
+
+</LinearLayout>
+
