--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="700dp"
     android:gravity="top"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/activity_top_margin">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:background="@drawable/main_nav_bar"
         android:gravity="center|clip_horizontal"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -26,7 +26,7 @@
             android:gravity="center_horizontal"
             android:text="Tower Power"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textColor="@color/grey_100"
             android:textSize="36sp"
             android:typeface="monospace" />
 
@@ -43,7 +43,7 @@
             android:gravity="center_horizontal"
             android:text="Location Based Android Game"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textColor="@color/grey_100"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -132,7 +132,8 @@
     <ImageView
         android:id="@+id/divider_4"
         android:layout_width="wrap_content"
-        android:layout_height="10dp"
+        android:layout_height="35dp"
+        android:paddingBottom="50dp"
         app:srcCompat="?attr/dividerHorizontal" />
 
     <TextView
@@ -142,7 +143,19 @@
         android:layout_gravity="center_horizontal|center"
         android:fontFamily="sans-serif-smallcaps"
         android:scaleType="fitCenter"
-        android:text="Group 5 - Trinity College Dublin"
+        android:text="Group 5 "
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="24sp"
+        android:typeface="sans" />
+
+    <TextView
+        android:id="@+id/group_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center_horizontal|center"
+        android:fontFamily="sans-serif-smallcaps"
+        android:scaleType="fitCenter"
+        android:text="Trinity College Dublin"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="24sp"
         android:typeface="sans" />
