--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#1836df</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff0501</color>
-    <color name="grey_100">#F5F5F5</color>
+    <color name="grey_100">#f5f5f5</color>
     <color name="grey_300">#E0E0E0</color>
 </resources>
