+new search game activity -hide navbar +retro colors (black and white theme) +icon changes on main menu +mixed changes

--- a/app/src/main/res/drawable/main_nav_bar.xml
+++ b/app/src/main/res/drawable/main_nav_bar.xml
@@ -2,9 +2,9 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#2915de"
+        android:centerColor="#ffffff"
 
-        android:endColor="#1400c9"
-        android:startColor="#1400c9"
+        android:endColor="#ffffff"
+        android:startColor="#dcdbdb"
         android:type="linear" />
 </shape>
