--- a/app/src/main/res/layout/app_bar_firebase.xml
+++ b/app/src/main/res/layout/app_bar_firebase.xml
@@ -12,10 +12,14 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            android:textColorPrimary ="@color/black"
+            android:textColorSecondary = "@color/black"
+            app:theme ="@style/ToolbarColoredBackArrow"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
