--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,8 +3,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="700dp"
+    android:layout_height="1000dp"
     android:gravity="top"
+    android:background="#060606"
     android:orientation="vertical">
 
     <LinearLayout
@@ -26,7 +27,7 @@
             android:gravity="center_horizontal"
             android:text="Tower Power"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textColor="@color/grey_100"
+            android:textColor="@color/black"
             android:textSize="36sp"
             android:typeface="monospace" />
 
@@ -43,7 +44,7 @@
             android:gravity="center_horizontal"
             android:text="Location Based Android Game"
             android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textColor="@color/grey_100"
+            android:textColor="@color/black"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -71,6 +72,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:scaleType="fitCenter"
         android:text="Collect"
+        android:textColor="@color/grey_100"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="18sp"
         android:typeface="sans" />
@@ -98,6 +100,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:scaleType="fitCenter"
         android:text="Destroy"
+        android:textColor="@color/grey_100"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="18sp"
         android:typeface="sans" />
@@ -125,6 +128,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:scaleType="fitCenter"
         android:text="Defend"
+        android:textColor="@color/grey_100"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="18sp"
         android:typeface="sans" />
@@ -139,25 +143,28 @@
     <TextView
         android:id="@+id/group_text"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:layout_gravity="center_horizontal|center"
         android:fontFamily="sans-serif-smallcaps"
         android:scaleType="fitCenter"
+        android:paddingTop="7dp"
         android:text="Group 5 "
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp"
+        android:textColor="@color/grey_100"
+        android:textSize="14sp"
         android:typeface="sans" />
 
     <TextView
         android:id="@+id/group_text2"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:layout_gravity="center_horizontal|center"
         android:fontFamily="sans-serif-smallcaps"
         android:scaleType="fitCenter"
         android:text="Trinity College Dublin"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp"
+        android:textColor="@color/grey_100"
+        android:textSize="18sp"
         android:typeface="sans" />
 
 </LinearLayout>
