--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1836df</color>
+    <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff0501</color>
     <color name="grey_100">#f5f5f5</color>
     <color name="grey_300">#E0E0E0</color>
+    <color name="black">#000000</color>
 </resources>
