--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -9,6 +9,55 @@
     android:gravity="top"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/player1img"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/SearchGame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.071"
+        mapbox:srcCompat="@drawable/alert_progress_drawable" />
+
+    <ImageView
+        android:id="@+id/player2img"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        mapbox:layout_constraintBottom_toTopOf="@+id/SearchGame"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintHorizontal_bias="0.074"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent"
+        mapbox:layout_constraintVertical_bias="0.071"
+        mapbox:srcCompat="@drawable/alert_progress_drawable" />
+
+    <ImageView
+        android:id="@+id/player3img"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.932"
+        mapbox:layout_constraintBottom_toTopOf="@+id/SearchGame"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintHorizontal_bias="0.074"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent"
+        mapbox:layout_constraintVertical_bias="0.071"
+        mapbox:srcCompat="@drawable/alert_progress_drawable" />
+
     <Button
         android:id="@+id/SearchGame"
         android:layout_width="212dp"
@@ -39,6 +88,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/dark-v9" />
+        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/dark-v9" >
+
+    </com.mapbox.mapboxsdk.maps.MapView>
 </android.support.constraint.ConstraintLayout>
 
