--- a/app/src/main/res/layout/content_maps.xml
+++ b/app/src/main/res/layout/content_maps.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.adwitiya.cs7cs3.towerpower.LiveMaps"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.adwitiya.cs7cs3.towerpower.LiveMaps">
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/map"
-        mapbox:mapbox_styleUrl="mapbox://styles/gattos/cjf1ei0qt02502rjt1clp2as7"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        mapbox:mapbox_styleUrl="mapbox://styles/gattos/cjf1ei0qt02502rjt1clp2as7">
+
+    </com.mapbox.mapboxsdk.maps.MapView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/showInv"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:clickable="true"
+        app:backgroundTint="#562D2D"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        mapbox:srcCompat="@drawable/ic_inventory_black_24dp" />
 
 </android.support.constraint.ConstraintLayout>
