--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="grey_100">#f5f5f5</color>
     <color name="grey_300">#E0E0E0</color>
     <color name="black">#000000</color>
+    <color name="green">#228B22</color>
+    <color name="red">#B22222</color>
 </resources>
