+ Refactoring, Activities and Helpers are now organized in their own folders. + Fix on layout of Chat. + Menu Buttons added for Chat Window. + Removed Unused Imports.

--- a/app/src/main/res/layout/app_bar_firebase.xml
+++ b/app/src/main/res/layout/app_bar_firebase.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.adwitiya.cs7cs3.towerpower.FirebaseLogin">
+    tools:context="com.adwitiya.cs7cs3.towerpower.Activity.FirebaseLogin">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -15,8 +15,8 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:layout_height="56dp"
+            android:background="@color/colorPrimary"
             android:textColorPrimary ="@color/black"
             android:textColorSecondary = "@color/black"
             app:theme ="@style/ToolbarColoredBackArrow"
@@ -26,7 +26,6 @@
 
     <include
         layout="@layout/content_firebase"
-        android:layout_height="515dp"
         tools:layout_editor_absoluteY="77dp" />
 
 </android.support.design.widget.CoordinatorLayout>
