--- a/app/src/main/res/layout/app_bar_maps.xml
+++ b/app/src/main/res/layout/app_bar_maps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.adwitiya.cs7cs3.towerpower.LiveMaps">
+    tools:context="com.adwitiya.cs7cs3.towerpower.Activity.LiveMaps">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -16,8 +16,8 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:layout_height="56dp"
+            android:background="@color/colorPrimary"
             android:textColorPrimary ="@color/black"
             android:textColorSecondary = "@color/black"
             app:theme ="@style/ToolbarColoredBackArrow"
