--- a/app/src/main/res/layout/content_maps.xml
+++ b/app/src/main/res/layout/content_maps.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.adwitiya.cs7cs3.towerpower.LiveMaps">
+    tools:context="com.adwitiya.cs7cs3.towerpower.Activity.LiveMaps">
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/map"
