--- a/app/src/main/res/layout/activity_email_password.xml
+++ b/app/src/main/res/layout/activity_email_password.xml
@@ -15,12 +15,12 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/icon"
+            android:id="@+id/google_icon"
             style="@style/ThemeOverlay.FirebaseIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:contentDescription="@string/desc_firebase_lockup"
-            android:src="@drawable/firebase_lockup_400" />
+            android:src="@mipmap/ic_launcher_new" />
 
         <TextView
             android:id="@+id/title_text"
