--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.ChatActivity">
+    tools:context=".activities.ChatActivity">
 
     <TextView
         android:id="@+id/emptyTextView"
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:imeOptions="actionDone"
+            android:hint="Enter your message here"
             android:inputType="text" />
 
         <Button
