--- a/app/src/main/res/layout/activity_email_password.xml
+++ b/app/src/main/res/layout/activity_email_password.xml
@@ -15,7 +15,6 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/google_icon"
             style="@style/ThemeOverlay.FirebaseIcon"
             android:layout_width="120dp"
             android:layout_height="120dp"
@@ -23,7 +22,6 @@
             android:src="@mipmap/ic_launcher_new" />
 
         <TextView
-            android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/title_bottom_margin"
@@ -85,7 +83,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/sign_in"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:theme="@style/ThemeOverlay.MyDarkButton"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/email_create_account_button"
@@ -93,7 +92,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/create_account"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:theme="@style/ThemeOverlay.MyDarkButton"
+                tools:ignore="ButtonStyle" />
         </LinearLayout>
 
         <LinearLayout
@@ -113,7 +113,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:text="@string/sign_out"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:theme="@style/ThemeOverlay.MyDarkButton"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/verify_email_button"
@@ -121,7 +122,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:text="@string/verify_email"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:theme="@style/ThemeOverlay.MyDarkButton"
+                tools:ignore="ButtonStyle" />
 
         </LinearLayout>
 
