--- a/app/src/main/res/layout/activity_google.xml
+++ b/app/src/main/res/layout/activity_google.xml
@@ -15,7 +15,6 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/google_icon"
             style="@style/ThemeOverlay.FirebaseIcon"
             android:layout_width="120dp"
             android:layout_height="120dp"
@@ -23,7 +22,6 @@
             android:src="@mipmap/ic_launcher_new" />
 
         <TextView
-            android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/title_bottom_margin"
@@ -69,7 +67,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/sign_out"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:theme="@style/ThemeOverlay.MyDarkButton"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/disconnect_button"
@@ -77,7 +76,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/disconnect"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:theme="@style/ThemeOverlay.MyDarkButton"
+                tools:ignore="ButtonStyle" />
         </LinearLayout>
 
     </RelativeLayout>
