--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,7 +20,8 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:padding="3dp"
         android:background="@color/black"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_round"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/user_name"
